--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
+ <title>Ruby on Rails Tutorial Sample <title><%= full_title(yield(:title)) %>
+ </title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <%= layout 'layout/shim' %>
+
 </head>
 <body>
-
+  <%= layout 'layout/header' %>	
+<div class="container">
 <%= yield %>
+<%= layout 'layout/footer'%>
+</div>
+
 
 </body>
 </html>
