--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,17 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <%= layout 'layout/shim' %>
+  <%=  render 'layouts/shim' %>
 
 </head>
 <body>
-  <%= layout 'layout/header' %>	
+  <%= render 'layouts/header' %>	
 <div class="container">
+	 <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
 <%= yield %>
-<%= layout 'layout/footer'%>
+<%= render 'layouts/footer'%>
 </div>
 
 
